--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,10 +1,11 @@
-body *{
+body * {
     font-family: 'Roboto';
 }
 
 .header {
     background: #2d3e50;
 }
+
 h1.header {
     font-family: 'Lobster', cursive;
     color: white;
@@ -15,8 +16,15 @@ h1.header {
 .menu {
     background: #8c9aa8;
     text-align: center;
+    padding-bottom: 1.5em;
 }
 
 .content {
     text-align: center;
+}
+
+.score-table {
+    margin-right: auto;
+    margin-left: auto;
+    text-align: left;
 }
