--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -9,7 +9,7 @@ body * {
 h1.header {
     font-family: 'Lobster', cursive;
     color: white;
-    font-size: 4em;
+    font-size: 8vw;
     text-align: center;
 }
 
