--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -52,7 +52,7 @@ footer {
 h3.content {
     font-family: 'Press Start 2P', cursive;
     letter-spacing: .2em;
-    font-size: 1.5em;
+    font-size: 4vw;
     margin: 0px;
     padding: 10px;
     color: whitesmoke;
