--- a/classicscores/templates/base.html
+++ b/classicscores/templates/base.html
@@ -23,7 +23,7 @@
                     <div class="pure-menu pure-menu-horizontal pure-menu-right">
                         <ul>
                             <li class="pure-menu-item">
-                                <a href="/calendar" class="pure-menu-link">Calender</a>
+                                <a href="/events" class="pure-menu-link">Events</a>
                             </li>
                             <li class="pure-menu-item">
                                 <a href="/tournaments" class="pure-menu-link">Tournaments</a>
