--- a/classicscores/static/styles/main.css
+++ b/classicscores/static/styles/main.css
@@ -271,6 +271,11 @@ a.pure-button-primary {
   color: inherit;
 }
 
+.event-image {
+  justify-content: center;
+  font-size: .9em;
+  max-width: 500px;
+}
 /*
 * -- List table styles
 */
