--- a/classicscores/eventcal/templates/eventcal/index.html
+++ b/classicscores/eventcal/templates/eventcal/index.html
@@ -9,7 +9,7 @@
         </div>
         <div class="pure-u-md-1-2">
             <h3>
-                <a href="/calendar/{{ previous.year }}/{{ previous.month }}" class="calendar-nav">
+                <a href="/events/{{ previous.year }}/{{ previous.month }}" class="calendar-nav">
                     <i class="fas fa-angle-double-left"></i>
                     previous
                 </a>
@@ -17,7 +17,7 @@
         </div>
         <div class="pure-u-md-1-2 calendar-nav-right">
              <h3>
-                 <a href="/calendar/{{ next.year }}/{{ next.month }}" class="calendar-nav">
+                 <a href="/events/{{ next.year }}/{{ next.month }}" class="calendar-nav">
                     next
                     <i class="fas fa-angle-double-right"></i>
                 </a>
