--- a/classicscores/templates/base.html
+++ b/classicscores/templates/base.html
@@ -12,16 +12,20 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto|Yesteryear" rel="stylesheet"> 
         {% block head %}
         {% endblock %}
+
     </head>
     <body>
     <div>
-        <div class="pure-g max-width-wrapper">
+        <div class="custom-wrapper pure-g" id="menu">
                 <div class="pure-u-1 pure-u-md-1-2">
-                    <a class="pure-menu-heading" href="/">Classic Scores</a>
+                    <div class="pure-menu">
+                        <a class="pure-menu-heading custom-brand" href="/">Classic Scores</a>
+                        <a href="#" class="custom-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
+                    </div>
                 </div>
                 <div class="pure-u-1 pure-u-md-1-2">
-                    <div class="pure-menu pure-menu-horizontal pure-menu-right">
-                        <ul>
+                    <div class="pure-menu pure-menu-horizontal custom-can-transform">
+                        <ul class="pure-menu-list">
                             <li class="pure-menu-item">
                                 <a href="/events" class="pure-menu-link">Events</a>
                             </li>
@@ -100,4 +104,53 @@
 		</div>
 	</div>
     </body>
+    <script>
+        (function (window, document) {
+        var menu = document.getElementById('menu'),
+            rollback,
+            WINDOW_CHANGE_EVENT = ('onorientationchange' in window) ? 'orientationchange':'resize';
+  
+        function toggleHorizontal() {
+            menu.classList.remove('closing');
+            [].forEach.call(
+                document.getElementById('menu').querySelectorAll('.custom-can-transform'),
+                function(el){
+                    el.classList.toggle('pure-menu-horizontal');
+                }
+            );
+        };
+  
+        function toggleMenu() {
+            // set timeout so that the panel has a chance to roll up
+            // before the menu switches states
+            if (menu.classList.contains('open')) {
+                menu.classList.add('closing');
+                rollBack = setTimeout(toggleHorizontal, 500);
+            }
+            else {
+                if (menu.classList.contains('closing')) {
+                    clearTimeout(rollBack);
+                } else {
+                    toggleHorizontal();
+                }
+            }
+            menu.classList.toggle('open');
+            document.getElementById('toggle').classList.toggle('x');
+        };
+  
+        function closeMenu() {
+            if (menu.classList.contains('open')) {
+                toggleMenu();
+            }
+        }
+  
+        document.getElementById('toggle').addEventListener('click', function (e) {
+            toggleMenu();
+            e.preventDefault();
+        });
+  
+        window.addEventListener(WINDOW_CHANGE_EVENT, closeMenu);
+        })(this, this.document);
+  
+    </script>
 </html>
