--- a/classicscores/static/styles/main.css
+++ b/classicscores/static/styles/main.css
@@ -78,6 +78,8 @@ i.arrow {
   -moz-transition: height 0.5s;
   -ms-transition: height 0.5s;
   transition: height 0.5s;
+  max-width: 980px;
+  margin: 0 auto;
 }
 
 .custom-wrapper.open {
@@ -242,6 +244,7 @@ a.pure-button-primary {
   color: white;
   font-weight: 500;
   text-shadow: 0 1px 1px black;
+  padding: 3em 0em;
 }
 
 /*
