--- a/classicscores/templates/base.html
+++ b/classicscores/templates/base.html
@@ -30,7 +30,7 @@
                                 <a href="/events" class="pure-menu-link">Events</a>
                             </li>
                             <li class="pure-menu-item">
-                                <a href="/tournaments" class="pure-menu-link">Tournaments</a>
+                                <a href="/tournaments" class="pure-menu-link">Scores</a>
                             </li>
                             <li class="pure-menu-item">
                                     <a href="mailto:#?subject=Contact from classic scores" class="pure-menu-link">Contact</a>
@@ -61,20 +61,21 @@
                     </li>
                     <li class="footer-item">
                         <a class="footer-item" href="/tournaments/league">
-                        League Results</li>
+                        League Results
                         </a>
+                    </li>
                 </ul>
             </div>
 			<div class="pure-u-1 pure-u-lg-1-3">
                 <h3>Classic Events</h3>
                 <ul class="footer-list">
                     <li class="footer-item">
-                        <a class="footer-item" href="/calendar">
-                        Calender
+                        <a class="footer-item" href="/events">
+                        Classic Events
                         </a>
                     </li>
                     <li class="footer-item">
-                        <a class="footer-item" href="/calendar">
+                        <a class="footer-item" href="/events">
                         Upcoming Tournaments
                         </a>
                     </li>
